fix remaining bugs
